# libhyb

./: Makefile.am  configure.ac  default.scm  default.shader  nvcc-wrapper
doc/: doxygen_mainpage.h.in
m4/: ax_stdcxx11_flag.m4
src/: Makefile.am  area-light-rays.cpp  area-light-rays.h  cmdline.cpp  cmdline.h  gpu-triangles.cu  main.cpp  pbrt.h  rta-cgls-connection.cpp  rta-cgls-connection.h  shadowrays.cpp  shadowrays.h  tracers.h  trav-util.h  viewer.cpp
